--- a/IndiaTourProject/IndiaTourProject/IndiaTourProject.csproj
+++ b/IndiaTourProject/IndiaTourProject/IndiaTourProject.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Models\Itinerary.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
