--- a/IndiaTourProject/IndiaTourProject/IndiaTourProject.csproj
+++ b/IndiaTourProject/IndiaTourProject/IndiaTourProject.csproj
@@ -185,11 +185,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\BookingDetailsController.cs" />
     <Compile Include="Controllers\CategorySubCategoriesController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItineraryPCDController.cs" />
     <Compile Include="Controllers\PackageListController.cs" />
+    <Compile Include="Controllers\PassengerDetails1Controller.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
