--- a/Angular/IndiaTour/package.json
+++ b/Angular/IndiaTour/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.4.1",
+    "circular-json": "^0.5.9",
     "core-js": "^2.5.4",
     "date-diff": "^0.2.1",
     "jquery": "^3.4.1",
